[gd_scene load_steps=13 format=3 uid="uid://c1y2wctd3bmlc"]

[ext_resource type="Script" uid="uid://sprmpkbeawok" path="res://scripts/goomba.gd" id="1_1ng5m"]
[ext_resource type="Texture2D" uid="uid://deeaoeu24kald" path="res://images/goomba.png" id="2_jke6y"]
[ext_resource type="Shader" uid="uid://dha41nql3qnc3" path="res://shaders/PaletteSwap.gdshader" id="2_mkp1w"]
[ext_resource type="AudioStream" uid="uid://uwpkam132gr5" path="res://audio/sfx-squish.mp3" id="3_1ukby"]
[ext_resource type="Texture2D" uid="uid://b5mpgx51ob4xh" path="res://images/palettes/palette.png" id="3_r30vi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25vgq"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jke6y"]
size = Vector2(12, 12)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g5xws"]
shader = ExtResource("2_mkp1w")
shader_parameter/palette = ExtResource("3_r30vi")
shader_parameter/accessRow = 4

[sub_resource type="AtlasTexture" id="AtlasTexture_lwfim"]
atlas = ExtResource("2_jke6y")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj1s3"]
atlas = ExtResource("2_jke6y")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jke6y"]
atlas = ExtResource("2_jke6y")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ng5m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwfim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj1s3")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jke6y")
}],
"loop": false,
"name": &"squish",
"speed": 2.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_1ng5m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_25vgq")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 13
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_jke6y")
debug_color = Color(0.943534, 6.83457e-06, 0.601195, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_g5xws")
sprite_frames = SubResource("SpriteFrames_1ng5m")
autoplay = "default"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2.17557e-06, 2.38419e-07)
scale = Vector2(2, 0.5)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1ukby")
attenuation = 1e-05
panning_strength = 0.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
